# Harmony

./: .gitignore  CMakeLists.txt  NOTES.txt  README.md  TODO.txt  bldr.lua
src/: build-defs.hpp  build-p1689.cpp  build-scan.cpp  build.cpp  build.hpp  cli.cpp  configuration.cpp  configuration.hpp  core.cpp  core.hpp  definitions.hpp  json.cpp  json.hpp  log.cpp  log.hpp
src/backend/: backend.hpp  clangcl-backend.cpp  clangcl-backend.hpp  msvc-backend.cpp  msvc-backend.hpp  msvc-common.cpp  msvc-common.hpp
src/backend/clang/: clangcl-backend.cpp  clangcl-backend.hpp
src/backend/msvc/: msvc-backend.cpp  msvc-backend.hpp
src/generators/: cmake-generator.cpp  cmake-generator.hpp
src/json/: json.cpp  json.hpp
test/: main.cpp  main.ixx  other.ixx  thing.hpp  third.ixx
